--- a/app/views/client/events/show.html.erb
+++ b/app/views/client/events/show.html.erb
@@ -174,8 +174,8 @@
               <h4 class="title text-left">
                 <%= link_to event.title, client_event_path(event.to_url) %>
               </h4>
-              <div class="meta date"><i class="icon icon-xs icon-calendar-white"></i> <%= event.to_uptime %></div>
-              <div class="meta location"><i class="icon icon-xs icon-location-white"></i> <%= event.location_name %></div>
+              <div class="meta date"><i class="icon icon-xs icon-calendar"></i> <%= event.to_uptime %></div>
+              <div class="meta location"><i class="icon icon-xs icon-location"></i> <%= event.location_name %></div>
             </div>
           </div>
         </div>
