--- a/app/views/client/events/show.html.erb
+++ b/app/views/client/events/show.html.erb
@@ -4,18 +4,29 @@
   <div class="cover" style="background-image: url(<%= @event.try(:cover, :full) %>);"></div>
   <div class="info">
     <div class="container">
-      <% if @event.show_highlight %>
-        <span style="background: #C04F8B;
-          color: #fff;
-          padding: 5px 10px;
-          font-weight: 600;
-          text-transform: uppercase;
-          letter-spacing: 0.04em;">Daydash Exclusive</span>
-      <% end %>
-      <h1 class="title"><%= @event.title %></h1>
-      <div class="meta date" style="display: inline-block; float: left; color: #fff"><i class="icon icon-xs icon-calendar-white" style="padding-right: 20px"></i> <%= @event.to_uptime %></div> &nbsp;
-      <div class="meta location" style="display: inline-block; float: left; margin-left: 10px" id="location" data-location-name="<%= @event.location_name %>" data-location-address="<%= @event.location_address %>"><i class="icon icon-xs icon-location-white" style="padding-right: 20px"></i>
-        <a href="https://www.google.co.th/maps?q=loc:<%= @event.latitude %>,<%= @event.longitude %>"  style="color: #fff" target="_blank"><%= @event.location_name %></a>
+      <div class="row">
+        <div class="col-xs-12">
+          <% if @event.show_highlight %>
+            <span style="background: #C04F8B;
+              color: #fff;
+              padding: 5px 10px;
+              font-weight: 600;
+              text-transform: uppercase;
+              letter-spacing: 0.04em;">Daydash Exclusive</span>
+          <% end %>
+          <h1 class="title"><%= @event.title %></h1>
+        </div>
+        <div class="col-xs-12 col-md-3">
+          <div class="meta date" style="display: inline-block; float: left; color: #fff">
+            <i class="icon icon-xs icon-calendar-white" style="padding-right: 20px"></i> <%= @event.to_uptime %>
+          </div>
+        </div>
+        <div class="col-xs-12 col-md-3">
+          <div class="meta location" style="display: inline-block; float: left;" id="location" data-location-name="<%= @event.location_name %>" data-location-address="<%= @event.location_address %>">
+            <i class="icon icon-xs icon-location-white" style="padding-right: 20px"></i>
+            <a href="https://www.google.co.th/maps?q=loc:<%= @event.latitude %>,<%= @event.longitude %>"  style="color: #fff" target="_blank"><%= @event.location_name %></a>
+          </div>
+        </div>
       </div>
     </div>
   </div>
@@ -27,13 +38,13 @@
         <div class="row">
           <div class="col-xs-12 col-md-4">
             <div class="row">
-              <div class="col-xs-4 col-sm-2 col-md-12">
+              <div class="col-xs-3 col-sm-2 col-md-12">
                 <%= image_tag @event.user.picture(:thumb), width: 70, height: 70, style: 'border-radius: 50px; border: 1px solid #EFEFEF' %>
-                <div style="position: absolute; top: 50px; left: 70px">
+                <div style="position: absolute; top: 50px; left: 65px">
                   <i class="icon icon-md icon-verified"></i>
                 </div>
               </div>
-              <div class="col-xs-8 col-sm-10 col-md-12">
+              <div class="col-xs-9 col-sm-10 col-md-12">
                 <p style="margin-top: 20px; font-size: 12px;">Organized By</p>
                 <h3 style="margin-top: 0;"><%= link_to  @event.user.company, organizer_path(@event.user.username), style: 'color: #000' %></h3>
               </div>
