--- a/app/views/client/events/show.html.erb
+++ b/app/views/client/events/show.html.erb
@@ -133,7 +133,7 @@
               <%= convert_to_currency(@section.price) %>
             </div>
           <% else %>
-            <div style="position: absolute; top: 50px; right: 20px; font-size: 34px;">
+            <div style="position: absolute; top: 50px; font-size: 34px;">
               <%= convert_to_currency(@section.price) %>
             </div>
           <% end %>
