--- a/app/views/organizer/parts/_event_form.html.erb
+++ b/app/views/organizer/parts/_event_form.html.erb
@@ -168,10 +168,10 @@
                   <tbody
                     <% @sections.each do |section| %>
                       <tr class="tickets" id="ticket-<%= section.id %>" data-ticket-id="<%= section.id %>">
-                        <td><input class="form-control" type="text" name="tickets[<%= section.id %>][title]" value="<%= section.title %>" placeholder="eg. General, VIP" /></td>
-                        <td><input class="form-control" type="number" name="tickets[<%= section.id %>][total]" value="<%= section.total %>" /></td>
+                        <td><input class="form-control" required="" type="text" name="tickets[<%= section.id %>][title]" value="<%= section.title %>" placeholder="eg. General, VIP" /></td>
+                        <td><input class="form-control" required="" type="number" name="tickets[<%= section.id %>][total]" value="<%= section.total %>" /></td>
                         <td><input class="form-control" type="number" name="tickets[<%= section.id %>][initial_price]" value="<%= section.initial_price %>" /></td>
-                        <td><input class="form-control" type="number" name="tickets[<%= section.id %>][price]" value="<%= section.price %>" /></td>
+                        <td><input class="form-control" required="" type="number" name="tickets[<%= section.id %>][price]" value="<%= section.price %>" /></td>
                         <!-- <td><input class="form-control" type="number" name="tickets[<%= section.id %>][unit]" value="<%= section.unit %>" /></td> -->
 
                         <td width="200">
