--- a/app/views/layouts/parts/_nav.html.erb
+++ b/app/views/layouts/parts/_nav.html.erb
@@ -29,7 +29,7 @@
           <%= link_to "Manage Event", organizer_events_path %>
         </li>
         <li id="menu-create-event">
-          <%= link_to "Create New Event", new_organizer_event_path %>
+          <%= link_to "Create New Event", new_organizer_event_path, "data-turbolinks" => false %>
         </li>
       <% else %>
         <li id="menu-my-tickets">
