--- a/app/views/client/events/show.html.erb
+++ b/app/views/client/events/show.html.erb
@@ -107,7 +107,7 @@
         </div>
         <% if @event.instruction.present? %>
         <div class="row description">
-          <div class="col col-xs-12 col-md-4">
+          <div class="col col-xs-12">
             <h2>More Details and Conditions</h2>
             <%= auto_link(simple_format(@event.instruction), :link => :all, :html => {:target => "_blank"}) %>
           </div>
