--- a/app/views/greetings/landing.html.erb
+++ b/app/views/greetings/landing.html.erb
@@ -59,7 +59,7 @@
               <div class="footer">
 
                 <div class="blog">
-                  <strong>อ่าน Blog → </strong><a href="https://blog.daydash.co/weekend-activities-for-couple-in-bangkok/" title="5 กิจกรรมสนุกๆ สำหรับคู่รัก แล้ววันเดทจะไม่น่าเบื่ออีกต่อไป">5 กิจกรรมสนุกๆ สำหรับคู่รัก แล้ววันเดทจะไม่น่าเบื่ออีกต่อไป</a>
+                  <strong>อ่าน Blog → </strong><a href="https://daydash.co/blog/weekend-activities-for-couple-in-bangkok/" title="5 กิจกรรมสนุกๆ สำหรับคู่รัก แล้ววันเดทจะไม่น่าเบื่ออีกต่อไป">5 กิจกรรมสนุกๆ สำหรับคู่รัก แล้ววันเดทจะไม่น่าเบื่ออีกต่อไป</a>
                 </div>
 
                 <div class="social">
