--- a/app/views/layouts/daydash.html.erb
+++ b/app/views/layouts/daydash.html.erb
@@ -150,7 +150,7 @@
                 <div class="list-title">Support</div>
                 <ul class="list-body nav">
                   <!-- <li><a href="/">List Event on Daydash</a></li> -->
-                  <li><a href="https://blog.daydash.co/" target="_blank">Daydash Blog</a></li>
+                  <li><a href="https://daydash.co/blog/" target="_blank">Daydash Blog</a></li>
                   <li><a href="/about">About</a></li>
                   <!-- <li><a href="/">How to Pay</a></li> -->
                   <!-- <li><a href="/">FAQ</a></li> -->
