--- a/app/views/client/events/express.html.erb
+++ b/app/views/client/events/express.html.erb
@@ -348,8 +348,10 @@ function omise_submit(form) {
     Omise.setPublicKey("<%= Rails.application.secrets.omise_pkey %>");
 
     var expiry = $("[name=card_expiry]").val();
+    var dataExpiry = expiry.replace(/\s/g, "");
     var match = null;
-    if(match = expiry.match(/^([0-9]+) \/ ([0-9]+)$/)) {
+
+    if(match = dataExpiry.match(/^([0-9]+)\/([0-9]+)$/)) {
       var expiration_month = match[1];
       var expiration_year = match[2];
     }
