--- a/app/views/layouts/parts/_tracking.html.erb
+++ b/app/views/layouts/parts/_tracking.html.erb
@@ -1,5 +1,5 @@
 
-<% if App.environment.production? %>
+<% if App.environment.production? and !current_user.try(:role, :admin) %>
   <!-- Facebook Pixel Code -->
   <script>
   !function(f,b,e,v,n,t,s){if(f.fbq)return;n=f.fbq=function(){n.callMethod?
@@ -56,6 +56,4 @@ mixpanel.init("a289e1db68d3fa5373095ae76c8e594a");</script>
           a.appendChild(r);
       })(window,document,'//static.hotjar.com/c/hotjar-','.js?sv=');
   </script>
-<!--
-  <script src="//load.sumome.com/" data-sumo-site-id="618f283379b1939e2649e6959b35b6621e99cc2a4418a0022bc907ae0fed84bb" async="async"></script> -->
 <% end %>
