--- a/app/views/layouts/parts/_tracking.html.erb
+++ b/app/views/layouts/parts/_tracking.html.erb
@@ -1,5 +1,5 @@
 
-<% if App.environment.production? and !current_user.try(:role, :admin) %>
+<% if App.environment.production? %>
   <!-- Facebook Pixel Code -->
   <script>
   !function(f,b,e,v,n,t,s){if(f.fbq)return;n=f.fbq=function(){n.callMethod?
