--- a/app/views/client/events/express.html.erb
+++ b/app/views/client/events/express.html.erb
@@ -402,6 +402,12 @@ function omise_submit(form) {
 
 <script> //View Function
   function on_change_payment_method(method) {
+    ga('send', 'event', {
+      eventCategory: 'Switch Options',
+      eventAction: 'Clicked',
+      eventLabel: method
+    });
+
     $('[name=payment_method]').val(method);
   }
 </script>
