--- a/app/views/client/events/express.html.erb
+++ b/app/views/client/events/express.html.erb
@@ -402,11 +402,13 @@ function omise_submit(form) {
 
 <script> //View Function
   function on_change_payment_method(method) {
-    ga('send', 'event', {
-      eventCategory: 'Switch Options',
-      eventAction: 'Clicked',
-      eventLabel: method
-    });
+    <% unless current_user.admin? %>
+      ga('send', 'event', {
+        eventCategory: 'Switch Options',
+        eventAction: 'Clicked',
+        eventLabel: method
+      });
+    <% end %>
 
     $('[name=payment_method]').val(method);
   }
