--- a/app/views/layouts/parts/_tracking.html.erb
+++ b/app/views/layouts/parts/_tracking.html.erb
@@ -5,20 +5,23 @@
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
   })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
+  <%= App.configure.ga_tracking_code %>
   ga('create', '<%= App.configure.ga_tracking_code %>', 'auto');
   <% unless current_user.try(:admin?) %>
     ga('send', 'pageview');
   <% end %>
 </script>
 
-<!-- Google Tag Manager --><!--
+<!-- Google Tag Manager -->
+<!--
 <noscript><iframe src="//www.googletagmanager.com/ns.html?id=GTM-NKJKFW"
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
 new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
 j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 '//www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-})(window,document,'script','dataLayer','GTM-NKJKFW');</script> -->
+})(window,document,'script','dataLayer','GTM-NKJKFW');</script>
+-->
 <!-- End Google Tag Manager -->
 
 <!-- Facebook Pixel Code -->
