--- a/app/views/user/passwords/new.html.erb
+++ b/app/views/user/passwords/new.html.erb
@@ -30,13 +30,13 @@
 
         <div class="form-group">
           <div class="col-sm-7">
-            <%= render "users/shared/forgot_password" %>
+            <%= render "user/shared/forgot_password" %>
           </div>
           <div class="col-sm-5 text-right">
-            <%= render "users/shared/signup" %>
+            <%= render "user/shared/signup" %>
           </div>
         </div>
-        <!-- <%= render "users/shared/links" %> -->
+        <!-- <%= render "user/shared/links" %> -->
       </div>
     </div>
   </div>
