--- a/app/views/user/registrations/new.html.erb
+++ b/app/views/user/registrations/new.html.erb
@@ -7,7 +7,7 @@
         <br>
         <p>
           <center>
-            <%= render "users/shared/social" %>
+            <%= render "user/shared/social" %>
           </center>
         </p>
 
@@ -48,7 +48,7 @@
 
           <div class="form-group">
             <p class="text-muted text-xs-center">Already have an account?
-              <%= render "users/shared/signin" %>
+              <%= render "user/shared/signin" %>
             </p>
           </div>
         <% end %>
