--- a/app/views/user/passwords/edit.html.erb
+++ b/app/views/user/passwords/edit.html.erb
@@ -30,7 +30,7 @@
           </div>
         <% end %>
 
-        <%= render "users/shared/links" %>
+        <%= render "user/shared/links" %>
     </div>
   </div>
 </div>
