--- a/app/views/layouts/daydash.html.erb
+++ b/app/views/layouts/daydash.html.erb
@@ -42,7 +42,7 @@
                 <ul class="nav navbar-nav navbar-right mobile-hide">
                   <% if current_user.admin? %>
                     <li>
-                      <%= link_to "<div class=\"role-badge organizer-badge nav-badge\">Admin</div>".html_safe, manage_users_path, class: 'organizer-nav' %>
+                      <%= link_to "<div class=\"role-badge organizer-badge nav-badge\">Admin</div>".html_safe, admin_manage_users_path, class: 'organizer-nav' %>
                     </li>
                   <% end %>
                   <% if current_user.can_organizer? %>
