--- a/app/views/client/payments/express.html.erb
+++ b/app/views/client/payments/express.html.erb
@@ -206,7 +206,7 @@
                           </div>
                           <div class="form-group col-xs-6">
                             <label>CVC</label>
-                            <input class="form-control" type="text" name="card_cvc" maxlength="3" value="" placeholder="•••" data-omise="security_code" />
+                            <input class="form-control" type="password" name="card_cvc" maxlength="3" value="" placeholder="•••" data-omise="security_code" />
                           </div>
                           <div class="col-xs-12">
                             <div id="token_errors" class="alert alert-danger" style="display: none;"></div>
