--- a/app/views/organizer/profiles/show.html.erb
+++ b/app/views/organizer/profiles/show.html.erb
@@ -52,8 +52,9 @@
       <% @events.each do |event| %>
           <div class="col-sm-6 col-md-4 event-wrapper <% event.categories.each do |category| %> event-category-<%= category.id %><% end %>">
             <%= link_to client_event_path(event.to_url), class: "event card" do %>
-
-              <% if event.uptime > Time.zone.now %>
+              <% if event.ticket_type.deal? %>
+                <div class="cover" style="background-image: url(<%= event.get_thumbnail %>);"></div>
+              <% elsif event.uptime > Time.zone.now %>
                 <div class="cover" style="background-image: url(<%= event.get_thumbnail %>);"></div>
               <% else %>
                 <div class="cover" style="background-image: url(<%= event.get_thumbnail %>); opacity: 0.5;">
