--- a/app/views/organizer/events/index.html.erb
+++ b/app/views/organizer/events/index.html.erb
@@ -26,13 +26,13 @@
                       <div class="ticket-sold-panel">
                         <div class="row">
                           <div class="col-xs-7 ticket-sold-label" style="font-size: 14px">จำนวนบัตรขายไป</div>
-                          <div class="col-xs-5 ticket-sold-value"><%= event.tickets.paid %> / <%= event.sections.total %></div>
+                          <div class="col-xs-5 ticket-sold-value"><%= event.tickets.paid.count %> / <%= event.sections.total %></div>
                         </div>
                         <div class="row">
                           <div class="col-xs-12">
                             <div class="progress">
-                              <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: <%= event.tickets.paid / event.sections.total.to_f * 100 %>%;">
-                                <span class="sr-only"><%= event.tickets.paid / event.sections.total.to_f * 100 %>% Complete</span>
+                              <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: <%= event.tickets.paid.count / event.sections.total.to_f * 100 %>%;">
+                                <span class="sr-only"><%= event.tickets.paid.count / event.sections.total.to_f * 100 %>% Complete</span>
                               </div>
                             </div>
                           </div>
