--- a/app/views/client/events/show.html.erb
+++ b/app/views/client/events/show.html.erb
@@ -169,11 +169,29 @@
         <div class="social-panel">
           <div class="row">
             <div class="col-xs-12">
-              <!-- <a class="btn btn-block btn-daydash">Add to my Wishlist</a> -->
               <div class="social-list">
-                <div class="fb-share-button" data-href="<%= client_event_path(@event.to_url) %>" data-layout="button_count" data-size="small" data-mobile-iframe="true"><a class="fb-xfbml-parse-ignore" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=<%= client_event_path(@event.to_url) %>">Share</a></div>
+                <style type="text/css">
+                  #share-buttons img {
+                  width: 35px;
+                  padding: 5px;
+                  border: 0;
+                  box-shadow: 0;
+                  display: inline;
+                  }
+                </style>
+                <div id="share-buttons">
+                  <a href="http://www.facebook.com/sharer.php?u=<%= "#{App.domain}#{client_event_path(@event.to_url)}" %>" target="_blank">
+                    <%= image_tag "social/facebook.png", alt: "Facebook" %>
+                  </a>
 
-                <a href="<%= client_event_path(@event.to_url) %>?text=Let's go! <%= @event.title %> @daydashapp" class="twitter-share-button" data-show-count="false">Tweet</a><script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+                  <a href="https://twitter.com/share?url=<%= "#{App.domain}#{client_event_path(@event.to_url)}" %>&amp;text=Let's go! <%= @event.title %> @daydashapp" target="_blank">
+                    <%= image_tag "social/twitter.png", alt: "Twitter" %>
+                  </a>
+
+                  <a href="mailto:?Subject=Let's go! <%= @event.title %>&amp;Body=Let's go! <%= @event.title %> <%= "#{App.domain}#{client_event_path(@event.to_url)}" %>">
+                    <%= image_tag "social/email.png", alt: "Email" %>
+                  </a>
+                </div>
               </div>
             </div>
           </div>
