order inspector 4 hours

--- a/app/views/client/payments/checkout.html.erb
+++ b/app/views/client/payments/checkout.html.erb
@@ -46,7 +46,7 @@
               <li>
                 <i class="icon icon-xs icon-waiting"></i>
                 <span class="color-daydash-red">
-                  กรุณาทำการชำระเงินและแจ้งชำระเงินภายใน 60 นาทีค่ะ <br />
+                  กรุณาทำการชำระเงินและแจ้งชำระเงินภายใน 4 ชั่วโมงค่ะ <br />
                   (ชำระภายใน วันที่ <%= @order.to_expires_on %>)
                 </span>
                 <p>หากพ้นเวลาดังกล่าว คำสั่งซื้อของคุณจะถูกยกเลิก และคุณจะต้องทำการสั่งซื้อใหม่อีกครั้ง</p>
@@ -101,13 +101,13 @@
                     </div>
                   </div>
                 </div>
-                
+
                 <p style="font-weight: 200; padding-bottom: 30px;">
                   2. แจ้งยืนยันการชำระเงินโดยส่งรูปถ่ายหลักฐานการโอนเงิน<br />
                   พร้อมรหัสการโอนเงิน <strong style="color: #21A4A5; "><%= @order.code %></strong> ผ่านทาง: Line <a href="https://line.me/ti/p/@daydash" target="_blank">@daydash</a> (มี @ ข้างหน้า)
                 </p>
                 <p style="font-weight: 200; padding-bottom: 30px;">
-                  3. เราจะส่งบัตรให้คุณทางอีเมลเมื่อเราได้รับแจ้งยืนยันการชำระเงินแล้วภายใน 60 นาที :)
+                  3. เราจะส่งบัตรให้คุณทางอีเมลเมื่อเราได้รับแจ้งยืนยันการชำระเงินแล้วภายใน 4 ชั่วโมง :)
                 </p>
               <% end %>
               <% if @order.omise? %>
