--- a/app/views/client/profiles/parts/_payment.html.erb
+++ b/app/views/client/profiles/parts/_payment.html.erb
@@ -47,5 +47,5 @@
   พร้อมรหัสการโอนเงิน ผ่านทาง: Line <a href="https://line.me/ti/p/@daydash" target="_blank">@daydash</a> (มี @ ข้างหน้า)
 </p>
 <p style="font-weight: 200; padding-bottom: 30px;">
-  3. เราจะส่งบัตรให้คุณทางอีเมลเมื่อเราได้รับแจ้งยืนยันการชำระเงินแล้วภายใน 60 นาที :)
+  3. เราจะส่งบัตรให้คุณทางอีเมลเมื่อเราได้รับแจ้งยืนยันการชำระเงินแล้วภายใน 4 ชั่วโมง :)
 </p>
