--- a/app/views/layouts_mailer/user/order.html.erb
+++ b/app/views/layouts_mailer/user/order.html.erb
@@ -68,12 +68,12 @@
                         พร้อมรหัสการโอนเงิน <strong style="color: #21A4A5; "><%= @order.code %></strong> ผ่านทาง: Line <a href="https://line.me/ti/p/@daydash" target="_blank">@daydash</a> (มี @ ข้างหน้า)
                       </p>
                       <p style="font-weight: 200; padding-bottom: 30px;">
-                        3. เราจะส่งบัตรให้คุณทางอีเมลเมื่อเราได้รับแจ้งยืนยันการชำระเงินแล้วภายใน 60 นาที :)
+                        3. เราจะส่งบัตรให้คุณทางอีเมลเมื่อเราได้รับแจ้งยืนยันการชำระเงินแล้วภายใน 4 ชั่วโมง :)
                       </p>
                       <table width="100%">
                         <tr>
                           <td align="center" style="color: red;">
-                            <strong>*** กรุณาทำการชำระเงินภายใน 60 นาที นับจากการสั่งซื้อ ***</strong><br />
+                            <strong>*** กรุณาทำการชำระเงินภายใน 4 ชั่วโมง นับจากการสั่งซื้อ ***</strong><br />
                             (ชำระภายใน <%= @order.to_expires_on %>)
                           </td>
                         </tr>
