--- a/app/views/organizer/events/checkin.html.erb
+++ b/app/views/organizer/events/checkin.html.erb
@@ -26,9 +26,9 @@
             <div class="row">
               <div class="col-xs-12 col-md-6">
                 <ul class="meta-info list-inline">
-                  <li>Attendee: <%= section.tickets.paid.count %></li>
-                  <li>Checked-in: <%= section.tickets.paid.used.count %></li>
-                  <li>Remaining: <%= section.tickets.paid.count - section.tickets.paid.used.count %></li>
+                  <li>Attendees: <%= section.tickets.available.count %></li>
+                  <li>Checked-in: <%= section.tickets.used.count %></li>
+                  <li>Remaining: <%= section.tickets.paid.count - section.tickets.used.count %></li>
                 </ul>
               </div>
               <div class="col-xs-12 col-md-6">
