--- a/app/views/organizer/events/orders.html.erb
+++ b/app/views/organizer/events/orders.html.erb
@@ -24,7 +24,7 @@
             <ul class="list-inline">
               <li>Orders: <%= @event.orders.paid.count %></li>
               <li>Total Sales: <%= convert_to_currency @event.get_total_sales %></li>
-              <li>Attendees: <%= @event.tickets.paid.count %></li>
+              <li>Attendees: <%= @event.tickets.available.count %></li>
             </ul>
           </div>
           <div class="table-responsive organizer-table">
