--- a/app/views/client/events/index.html.erb
+++ b/app/views/client/events/index.html.erb
@@ -17,19 +17,8 @@
 </div>
 <div class="section" id="event-section">
   <div class="container">
-    <ul class="nav nav-pills nav-daydash nav-daydash-green">
-      <li class="active">
-        <%= link_to 'ALL', 'javascript:;', class: 'category-filter', 'data-filter': 0 %>
-        <!-- <a href="#" onclick="return"></a> -->
-      </li>
-      <% @global_categories.each do |category| %>
-        <li class="">
-          <%= link_to category.title, 'javascript:;', class: 'category-filter', 'data-filter': category.id %>
-        </li>
-      <% end %>
-    </ul>
-
     <div class="row event-list">
+      <center><h1>กิจกรรมสำหรับเสาร์อาทิตย์นี้</h1></center>
       <% @events.each do |event| %>
         <div class="col-sm-6 col-md-4 event-wrapper <% event.categories.each do |category| %> event-category-<%= category.id %><% end %>">
           <%= link_to client_event_path(event.to_url), class: "event card" do %>
