--- a/app/views/client/events/show.html.erb
+++ b/app/views/client/events/show.html.erb
@@ -39,14 +39,16 @@
           <div class="col-xs-12 col-md-4">
             <div class="row">
               <div class="col-xs-3 col-sm-2 col-md-12">
-                <%= image_tag @event.user.picture(:thumb), width: 70, height: 70, style: 'border-radius: 50px; border: 1px solid #EFEFEF' %>
-                <div style="position: absolute; top: 50px; left: 65px">
-                  <i class="icon icon-md icon-verified"></i>
-                </div>
+                <%= link_to organizer_path(@event.user.username) do %>
+                  <%= image_tag @event.user.picture(:thumb), width: 70, height: 70, style: 'border-radius: 50px; border: 1px solid #EFEFEF' %>
+                  <div style="position: absolute; top: 50px; left: 65px">
+                    <i class="icon icon-md icon-verified"></i>
+                  </div>
+                <% end %>
               </div>
               <div class="col-xs-9 col-sm-10 col-md-12">
                 <p style="margin-top: 20px; font-size: 12px;">Organized By</p>
-                <h3 style="margin-top: 0;"><%= link_to  @event.user.company, organizer_path(@event.user.username), style: 'color: #000' %></h3>
+                <h3 style="margin-top: 0;"><%= link_to @event.user.company, organizer_path(@event.user.username), style: 'color: #000' %></h3>
               </div>
             </div>
           </div>
