Fix backgroud image

--- a/app/views/client/events/index.html.erb
+++ b/app/views/client/events/index.html.erb
@@ -4,7 +4,7 @@
   <div class="slick" id="cover-slick">
     <% @covers.each do |cover| %>
       <div>
-        <div class="page-cover" style="background-image: url(<%= cover[:image] %>)">
+        <div class="page-cover" style="background-image: url('<%= cover[:image] %>')">
           <div class="info">
             <div class="container">
               <div class="caption"><%= raw(cover[:caption]) %></div>
@@ -33,7 +33,7 @@
       <% @events.each do |event| %>
         <div class="col-sm-6 col-md-4 event-wrapper <% event.categories.each do |category| %> event-category-<%= category.id %><% end %>">
           <%= link_to client_event_path(event.to_url), class: "event card" do %>
-            <div class="cover" style="background-image: url(<%= event.get_thumbnail %>);"></div>
+            <div class="cover" style="background-image: url('<%= event.get_thumbnail %>');"></div>
             <div class="info">
               <h4 class="title text-left"><%= event.title %></h4>
               <div class="meta date"><i class="icon icon-xs icon-calendar"></i> <%= event.to_uptime %></div>
