--- a/app/views/client/events/show.html.erb
+++ b/app/views/client/events/show.html.erb
@@ -1,7 +1,7 @@
 
 <script>$('body').attr('id', 'event-page');</script>
 <div class="section" id="cover-section">
-  <div class="cover" style="background-image: url(<%= @event.try(:cover, :full) %>);"></div>
+  <div class="cover" style="background-image: url('<%= @event.try(:cover, :full) %>');"></div>
   <div class="info">
     <div class="container">
       <div class="row">
@@ -118,7 +118,7 @@
         <div class="row gallery">
           <% @event.event_pictures.each do |image| %>
           <div class="col col-xs-6 col-md-4">
-            <a class="image" style="background-image: url(<%= image.try(:media, :thumb) %>);" data-toggle="lightbox" href="<%= image.try(:media, :thumb) %>" data-parent=".gallery" data-gallery="multiimages"></a>
+            <a class="image" style="background-image: url('<%= image.try(:media, :thumb) %>');" data-toggle="lightbox" href="<%= image.try(:media, :thumb) %>" data-parent=".gallery" data-gallery="multiimages"></a>
           </div>
           <% end %>
         </div>
@@ -212,7 +212,7 @@
         <div class="col-sm-6 col-md-4">
           <div class="event card">
             <%= link_to client_event_path(event.to_url) do %>
-              <div class="cover" style="background-image: url(<%= event.get_thumbnail %>);"></div>
+              <div class="cover" style="background-image: url('<%= event.get_thumbnail %>');"></div>
             <% end %>
             <div class="info">
               <h4 class="title text-left">
