--- a/app/views/client/payments/checkout.html.erb
+++ b/app/views/client/payments/checkout.html.erb
@@ -172,7 +172,7 @@
         <div class="col-sm-6 col-md-4">
           <div class="event card">
             <%= link_to client_event_path(event.to_url) do %>
-              <div class="cover" style="background-image: url(<%= event.get_thumbnail %>);"></div>
+              <div class="cover" style="background-image: url('<%= event.get_thumbnail %>');"></div>
             <% end %>
             <div class="info">
               <h4 class="title text-left">
