--- a/app/views/client/profiles/tickets.html.erb
+++ b/app/views/client/profiles/tickets.html.erb
@@ -15,7 +15,7 @@
                 <div class="ticket ticket-1">
                   <div class="row">
                     <div class="col-xs-12 col-md-3 pull-right">
-                      <div class="cover" style="background-image: url(<%= ticket.event.get_thumbnail %>);">
+                      <div class="cover" style="background-image: url('<%= ticket.event.get_thumbnail %>');">
                         <img src="<%= ticket.qr_code(:medium) %>" width="100%" />
                       </div>
                     </div>
@@ -119,7 +119,7 @@
                       </div>
                     </div>
                     <div class="col-xs-12 col-md-3">
-                      <a class="cover" style="background-image: url(<%= ticket.event.get_thumbnail %>);" href="<%= client_event_path(ticket.event.id) %>">
+                      <a class="cover" style="background-image: url('<%= ticket.event.get_thumbnail %>');" href="<%= client_event_path(ticket.event.id) %>">
                         <img src="<%= ticket.qr_code(:medium) %>" width="100%" />
                       </a>
                     </div>
