--- a/app/views/layouts/daydash.html.erb
+++ b/app/views/layouts/daydash.html.erb
@@ -56,7 +56,7 @@
               <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar"><i class="icon icon-menu"></i></button>
               <% if current_user.present? %>
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#profile-navbar" aria-expanded="false" aria-controls="navbar">
-                  <div class="user-profile-photo" style="background-image: url(<%= current_user.picture(:medium) %>)"></div>
+                  <div class="user-profile-photo" style="background-image: url('<%= current_user.picture(:medium) %>')"></div>
                 </button>
               <% end %>
 
@@ -79,7 +79,7 @@
                   <% end %>
                   <li class="dropdown user-dropdown">
                     <a href="/" class="dropdown-toggle" data-toggle="dropdown" role="button">
-                      <div class="user-profile-photo" style="background-image: url(<%= current_user.picture(:medium) %>"></div>
+                      <div class="user-profile-photo" style="background-image: url('<%= current_user.picture(:medium) %>')"></div>
                       <% if current_user.organizer? %>
                         <div class="user-name"><%= current_user.company %></div>
                       <% else %>
