--- a/app/views/layouts_mailer/parts/_order.html.erb
+++ b/app/views/layouts_mailer/parts/_order.html.erb
@@ -95,7 +95,7 @@
           <table border="0" cellpadding="0" cellspacing="0" width="100%" class="mcnCaptionBlock">
             <tbody class="mcnCaptionBlockOuter">
               <tr>
-                <td class="mcnCaptionBlockInner" valign="top" style="padding:9px; background-image: url(<%= "#{App.domain}/src/images/email/order/tile-pattern.png" %>); background-repeat: repeat;">
+                <td class="mcnCaptionBlockInner" valign="top" style="padding:9px; background-image: url('<%= "#{App.domain}/src/images/email/order/tile-pattern.png" %>'); background-repeat: repeat;">
                   <table align="left" border="0" cellpadding="0" cellspacing="0" class="mcnCaptionBottomContent" width="100%">
                     <tbody>
                       <tr>
