credit auto complete

--- a/app/views/client/payments/express.html.erb
+++ b/app/views/client/payments/express.html.erb
@@ -202,11 +202,11 @@
                           </div>
                           <div class="form-group col-xs-6">
                             <label>Expire Date</label>
-                            <input class="form-control" type="text" name="card_expiry" value="" placeholder="••/••" data-omise="expiry" />
+                            <input class="form-control" type="text" name="card_expiry" value="" placeholder="••/••" data-omise="expiry" autocomplete="off" />
                           </div>
                           <div class="form-group col-xs-6">
                             <label>CVC</label>
-                            <input class="form-control" type="password" name="card_cvc" maxlength="3" value="" placeholder="•••" data-omise="security_code" />
+                            <input class="form-control" type="password" name="card_cvc" maxlength="3" value="" placeholder="•••" data-omise="security_code" autocomplete="off" />
                           </div>
                           <div class="col-xs-12">
                             <div id="token_errors" class="alert alert-danger" style="display: none;"></div>
