--- a/app/views/organizer/parts/_event_form.html.erb
+++ b/app/views/organizer/parts/_event_form.html.erb
@@ -259,6 +259,7 @@
 
           div.attr('data-id', data.id);
           div.attr('data-index', data.sort_index);
+          div.css('width', '390px');
 
           remove.css('position', 'absolute')
                 .css('top', '-15px')
@@ -268,7 +269,8 @@
 
           remove.attr('onclick', 'return removeImage("'+ data.id +'")')
 
-          image.css('background-image', 'url(' + data.media + ')');
+          image.css('background-image', 'url(' + data.media + ')')
+               .css('height', '250px');
 
           div.append(remove).append(image);
 
@@ -299,16 +301,31 @@
   }
 
   function removeImage(media_id) {
-    $.ajax({
-      url: '<%= delete_attachment_organizer_event_path(@event) %>',
-      data: {
-        'media_id': media_id
-      },
-      type: 'DELETE',
-      success: function(result) {
-        orderImage();
-      }
-    });
+    swal({
+      title: 'Are you sure?',
+      // text: "You won't be able to revert this!",
+      type: 'warning',
+      showCancelButton: true,
+      confirmButtonColor: '#3085d6',
+      cancelButtonColor: '#d33',
+      confirmButtonText: 'Yes, delete it!'
+    }).then(function(){
+      $.ajax({
+        url: '<%= delete_attachment_organizer_event_path(@event) %>',
+        data: {
+          'media_id': media_id
+        },
+        type: 'DELETE',
+        success: function(result) {
+          orderImage();
+          swal(
+            'Deleted!',
+            'Your file has been deleted.',
+            'success'
+          )
+        }
+      });
+    })
   }
 </script>
 <% end %>
