--- a/app/views/organizer/profiles/show.html.erb
+++ b/app/views/organizer/profiles/show.html.erb
@@ -53,7 +53,7 @@
           <div class="col-sm-6 col-md-4 event-wrapper <% event.categories.each do |category| %> event-category-<%= category.id %><% end %>">
             <%= link_to client_event_path(event.to_url), class: "event card" do %>
               <% if event.uptime.present? %>
-                <% if event.uptime > Time.zone.now %>
+                <% if event.uptime < Time.zone.now %>
                   <div class="cover" style="background-image: url('<%= event.get_thumbnail %>'); filter: grayscale(100%);">
                     <div style="color: #fff;
                           font-weight: 600;
